# optogo-dataloader

./: .gitignore  .gitmodules  Dockerfile  config.py  logging.ini  main.py  pyproject.toml
.github/workflows/: deploy.yml
loader/: main.py
main/: dataloader.py
requirements/: prod.txt
tests/: test_dataloader.py
