[tool.poetry]
name = "optogo-dataloader"
version = "0.1.0"
description = ""
authors = ["Andrew Cusick <andrewcusick13@outlook.com>"]
readme = "README.md"
packages = [{include = "optogo_dataloader"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.15"
sqlalchemy-utils = "^0.41.1"
pymongo = "^4.3.3"
pika = "^1.3.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
