[project]
name = "optogo-dataloader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic[dotenv] <2.0",
    "sqlalchemy >=2.0.15",
    "sqlalchemy-utils >=0.41.1",
    "pymongo >=4.3.3",
    "pika >=1.3.2",
    "psycopg2-binary >=2.9.6",
    "pytest>=8.3.3",
]

[tool.uv]
dev-dependencies = [
    "ruff >=0.6.2",
    "pre-commit >=3.8.0",
]
